[gd_scene load_steps=16 format=2]

[ext_resource path="res://windows/base_window.tscn" type="PackedScene" id=1]
[ext_resource path="res://images/pewds.png" type="Texture" id=2]
[ext_resource path="res://images/youtube_header.png" type="Texture" id=3]
[ext_resource path="res://fonts/m5x7_med.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/m5x7_small.tres" type="DynamicFont" id=5]
[ext_resource path="res://images/YT_user_icon.png" type="Texture" id=6]
[ext_resource path="res://themes/youtube.tres" type="Theme" id=7]
[ext_resource path="res://scripts/youtube/BtnReport.gd" type="Script" id=8]
[ext_resource path="res://scripts/Spinner.gd" type="Script" id=9]
[ext_resource path="res://scripts/youtube/TOS.gd" type="Script" id=10]
[ext_resource path="res://scripts/youtube/BtnTOS.gd" type="Script" id=11]
[ext_resource path="res://scripts/BtnOK.gd" type="Script" id=12]
[ext_resource path="res://scripts/youtube/ChkBoxTOS.gd" type="Script" id=13]
[ext_resource path="res://scripts/youtube/BtnCaptchaNext.gd" type="Script" id=14]
[ext_resource path="res://scripts/youtube/BtnCompleteClaim.gd" type="Script" id=15]

[node name="Node2D" instance=ExtResource( 1 )]
dimensions = Vector2( 480, 360 )
title = "youtube"

[node name="Body" parent="." index="0"]
margin_right = 480.0
margin_bottom = 360.0

[node name="Title" parent="Body" index="0"]
margin_right = 480.0

[node name="WindowClose" parent="Body/Title" index="0"]
margin_left = 466.0
margin_right = 480.0

[node name="ReportButton" type="Button" parent="Body" index="1"]
margin_left = 263.0
margin_top = 328.0
margin_right = 356.0
margin_bottom = 352.0
rect_pivot_offset = Vector2( 71, 92 )
focus_mode = 0
mouse_filter = 1
mouse_default_cursor_shape = 2
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "Report"
script = ExtResource( 8 )

[node name="Control" type="Control" parent="Body" index="2"]
mouse_filter = 1

[node name="Layer1" type="Control" parent="Body/Control" index="0"]
mouse_filter = 1

[node name="Pewds" type="Sprite" parent="Body/Control/Layer1" index="0"]
position = Vector2( 186, 179 )
texture = ExtResource( 2 )

[node name="YoutubeHeader" type="Sprite" parent="Body/Control/Layer1" index="1"]
position = Vector2( 156, 42 )
texture = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="Body/Control/Layer1" index="2"]
margin_left = 365.0
margin_top = 99.0
margin_right = 473.0
margin_bottom = 173.0
rect_pivot_offset = Vector2( 30, 85 )
mouse_filter = 2
color = Color( 0.917647, 0.929412, 0.941176, 1 )

[node name="ColorRect3" type="ColorRect" parent="Body/Control/Layer1" index="3"]
margin_left = 365.0
margin_top = 178.0
margin_right = 473.0
margin_bottom = 252.0
rect_pivot_offset = Vector2( 71, 92 )
mouse_filter = 2
color = Color( 0.917647, 0.929412, 0.941176, 1 )

[node name="ColorRect4" type="ColorRect" parent="Body/Control/Layer1" index="4"]
margin_left = 365.0
margin_top = 257.0
margin_right = 473.0
margin_bottom = 331.0
rect_pivot_offset = Vector2( 71, 92 )
mouse_filter = 2
color = Color( 0.917647, 0.929412, 0.941176, 1 )

[node name="ColorRect5" type="ColorRect" parent="Body/Control/Layer1" index="5"]
margin_left = 365.0
margin_top = 336.0
margin_right = 473.0
margin_bottom = 360.0
rect_pivot_offset = Vector2( 71, 92 )
mouse_filter = 2
color = Color( 0.917647, 0.929412, 0.941176, 1 )

[node name="VideoTitle" type="Label" parent="Body/Control/Layer1" index="6"]
margin_left = 15.0
margin_top = 290.0
margin_right = 358.0
margin_bottom = 326.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "“Swords of Fortune” is NOT worth $60! STOP GIVING M&S YOUR MONEY."
autowrap = true

[node name="Username" type="Label" parent="Body/Control/Layer1" index="7"]
margin_left = 50.0
margin_top = 327.0
margin_right = 191.0
margin_bottom = 353.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Dunc69"

[node name="YtUserIcon" type="Sprite" parent="Body/Control/Layer1" index="8"]
position = Vector2( 28, 326 )
texture = ExtResource( 6 )
centered = false

[node name="MoreVids" type="Label" parent="Body/Control/Layer1" index="9"]
margin_left = 365.0
margin_top = 69.0
margin_right = 473.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "More Vids"
align = 1

[node name="Layer2" type="Control" parent="Body/Control" index="1"]
visible = false
mouse_filter = 1

[node name="OpacityMask" type="ColorRect" parent="Body/Control/Layer2" index="0"]
margin_top = 14.0
margin_right = 480.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.666667 )

[node name="ColorRect" type="ColorRect" parent="Body/Control/Layer2" index="1"]
margin_left = 78.0
margin_top = 58.0
margin_right = 396.0
margin_bottom = 338.0
mouse_filter = 2

[node name="Spinner" type="Sprite" parent="Body/Control/Layer2" index="2"]
visible = false
position = Vector2( 233.75, 183.25 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 9, 18 )
script = ExtResource( 9 )

[node name="RichTextLabel" type="RichTextLabel" parent="Body/Control/Layer2" index="3"]
margin_left = 88.0
margin_top = 98.0
margin_right = 385.0
margin_bottom = 276.0
theme = ExtResource( 7 )
custom_colors/default_color = Color( 0.541176, 0.541176, 0.541176, 1 )
text = "If you do not or cannot agree to indemnify the Licensor or any Contributor to the user how to obtain such Source Code of your company or organization. Fee\" means any addition to, deletion from, and/or change to, the modification, by any other entity. Each Contributor represents that to its Contributions set forth herein.

Relationship of Parties. This License Agreement is published, Contributor may participate in any such work a brief idea of what it does. Copyright (C) year name of the preceding Paragraph, for commercial or non-commercial purposes and in the page you re-use, you must continue to use Servicemarks (sm) or Trademarks (tm) of Zope Corporation. The Licensor is not already Covered Code is not intended to apply it to code which is recorded in the page history is sufficient.

Licensing notice: Each copy or copies of the Work. If there is any inconsistency between these terms and conditions of this Agreement; if the Program is Redistributed pursuant to Section 3.4(a) above, Contributor believes that Contributor's Modifications are Contributor's original creation(s) and/or Contributor has attached the notice in Exhibit A in each file of the package, while giving the non-standard executables and testcases with their corresponding Standard Version executables and testcases, giving the users of the \"historic permission notice\" adapted to Europen law because in some relevant lists We believe you are not considered parts of the CC-BY-SA license If you create or to ask you to make, have made, use, practice, sell, and offer for sale, have made, and/or otherwise dispose of Modifications made by that Participant. If You initiate litigation by asserting a patent license granted by a Contributor might include the names of its utilization of rights under this Agreement in relation to such a way that you can only be modified by The Perl Foundation in the Current Maintainer is reachable and agrees to defend claims against the Indemnified Contributor to control, and cooperate with the complete machine-readable source code, even though third parties are not the Current Maintainer, or the person stated to be bound by the terms stated above for the Package.

If the Work to honor the rest of the retrieved font information. Content\" shall mean products provided to end users, business partners and the rights and licenses granted hereunder, each Recipient hereby assumes sole responsibility to secure any other entity based on or through a hyperlink (where possible) or URL to an updated version of this license document would apply, with the distribution. Neither the names of the Contribution of such noncompliance. If all Recipient's rights under this Agreement, each Contributor hereby grants You, effective on the Program) on a medium customarily used for software interchange; or, b) accompany it with full information as to effect the economic benefits and intent of this License shall survive. Termination Upon Assertion of Patent Infringement.

If you assert a patent infringement litigation, then the reasonable value of any installation facilities provided by any party alleging that the above copyright notice, this list of conditions and the base LaTeX distribution explains the motivation behind the conditions of this Agreement , including but not limited to the Program, the distribution of the date of initial External Deployment, whichever is longer. You should preferably distribute the Program, the Contributor who includes the Program itself (excluding combinations of the work cannot be construed against the other Contributors related to those to whom you made to create or use a modified version that alters or restricts the applicable version of the License, your rights to a jury trial in any way. Notwithstanding the foregoing, if applicable law — for example, indicating this in the edit summary, which is implemented by public license is intended to apply in other circumstances. It is therefore usually in your license should not refer to copyrights, to this License."
script = ExtResource( 10 )

[node name="Label" type="Label" parent="Body/Control/Layer2" index="4"]
margin_left = 143.0
margin_top = 62.0
margin_right = 321.0
margin_bottom = 88.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Terms of Service"

[node name="CheckBox" type="CheckBox" parent="Body/Control/Layer2" index="5"]
margin_left = 86.0
margin_top = 281.0
margin_right = 104.0
margin_bottom = 305.0
mouse_filter = 1
theme = ExtResource( 7 )
disabled = true
enabled_focus_mode = 0
script = ExtResource( 13 )

[node name="Label" type="Label" parent="Body/Control/Layer2/CheckBox" index="0"]
margin_left = 24.0
margin_top = 4.0
margin_right = 277.0
margin_bottom = 18.0
mouse_filter = 1
theme = ExtResource( 7 )
text = "I have read and agree to the terms of service."

[node name="Button" type="Button" parent="Body/Control/Layer2" index="6"]
margin_left = 337.0
margin_top = 305.0
margin_right = 385.0
margin_bottom = 329.0
mouse_filter = 1
theme = ExtResource( 7 )
disabled = true
enabled_focus_mode = 0
text = "Next"
script = ExtResource( 11 )

[node name="Layer3" type="Control" parent="Body/Control" index="2"]
visible = false
mouse_filter = 1

[node name="OpacityMask" type="ColorRect" parent="Body/Control/Layer3" index="0"]
margin_top = 14.0
margin_right = 480.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.666667 )

[node name="ColorRect" type="ColorRect" parent="Body/Control/Layer3" index="1"]
margin_left = 111.0
margin_top = 129.0
margin_right = 352.0
margin_bottom = 244.0
mouse_filter = 2

[node name="Label" type="Label" parent="Body/Control/Layer3" index="2"]
margin_left = 111.0
margin_top = 131.0
margin_right = 352.0
margin_bottom = 157.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Error"
align = 1

[node name="Label2" type="Label" parent="Body/Control/Layer3" index="3"]
margin_left = 120.0
margin_top = 168.0
margin_right = 341.0
margin_bottom = 216.0
theme = ExtResource( 7 )
text = "Please read the terms of service before checking the box."
autowrap = true

[node name="Button" type="Button" parent="Body/Control/Layer3" index="4"]
margin_left = 300.0
margin_top = 216.0
margin_right = 348.0
margin_bottom = 240.0
focus_mode = 0
mouse_filter = 1
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "OK"
script = ExtResource( 12 )

[node name="Layer4" type="Control" parent="Body/Control" index="3"]
visible = false
mouse_filter = 1

[node name="OpacityMask" type="ColorRect" parent="Body/Control/Layer4" index="0"]
margin_top = 14.0
margin_right = 480.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.666667 )

[node name="ColorRect" type="ColorRect" parent="Body/Control/Layer4" index="1"]
margin_left = 99.0
margin_top = 83.0
margin_right = 374.0
margin_bottom = 298.0
mouse_filter = 2

[node name="Spinner" type="Sprite" parent="Body/Control/Layer4" index="2"]
visible = false
position = Vector2( 233.75, 183.25 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 9, 18 )
script = ExtResource( 9 )

[node name="Label" type="Label" parent="Body/Control/Layer4" index="3"]
margin_left = 99.0
margin_top = 86.0
margin_right = 374.0
margin_bottom = 112.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "Captcha"
align = 1

[node name="Button" type="Button" parent="Body/Control/Layer4" index="4"]
margin_left = 319.0
margin_top = 267.0
margin_right = 367.0
margin_bottom = 291.0
focus_mode = 0
mouse_filter = 1
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "Next"
script = ExtResource( 14 )

[node name="Layer5" type="Control" parent="Body/Control" index="4"]
visible = false
mouse_filter = 1

[node name="OpacityMask" type="ColorRect" parent="Body/Control/Layer5" index="0"]
margin_top = 14.0
margin_right = 480.0
margin_bottom = 360.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.666667 )

[node name="ColorRect" type="ColorRect" parent="Body/Control/Layer5" index="1"]
margin_left = 115.0
margin_top = 129.0
margin_right = 356.0
margin_bottom = 244.0
mouse_filter = 2

[node name="Label" type="Label" parent="Body/Control/Layer5" index="2"]
margin_left = 115.0
margin_top = 131.0
margin_right = 356.0
margin_bottom = 157.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 4 )
text = "File Copyright Claim"
align = 1

[node name="Label2" type="Label" parent="Body/Control/Layer5" index="3"]
margin_left = 124.0
margin_top = 168.0
margin_right = 345.0
margin_bottom = 216.0
theme = ExtResource( 7 )
text = "Are you sure? Filing a claim will remove this video from our recommendedations algorithm."
autowrap = true

[node name="Button" type="Button" parent="Body/Control/Layer5" index="4"]
margin_left = 266.0
margin_top = 215.0
margin_right = 351.0
margin_bottom = 239.0
focus_mode = 0
mouse_filter = 1
theme = ExtResource( 7 )
enabled_focus_mode = 0
text = "Submit Claim"
script = ExtResource( 15 )

[node name="Layer6" type="Control" parent="Body/Control" index="5"]
visible = false
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="Body/Control/Layer6" index="0"]
margin_left = 16.0
margin_top = 74.0
margin_right = 355.0
margin_bottom = 265.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Body/Control/Layer6" index="1"]
margin_left = 14.0
margin_top = 138.0
margin_right = 358.0
margin_bottom = 164.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = ":("
align = 1

[node name="Label2" type="Label" parent="Body/Control/Layer6" index="2"]
margin_left = 14.0
margin_top = 168.0
margin_right = 358.0
margin_bottom = 216.0
theme = ExtResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "This video is longer available."
align = 1
autowrap = true
